--- a/.hintrc
+++ b/.hintrc
@@ -15,6 +15,12 @@
         "link-name": "off",
         "button-name": "off"
       }
+    ],
+    "axe/parsing": [
+      "default",
+      {
+        "duplicate-id-active": "off"
+      }
     ]
   }
 }
